third_party/move/move-compiler-v2/tests/checking/typing/binary_bit_or_invalid.exp

Diagnostics:
error: no matching declaration of `|`
  ┌─ tests/checking/typing/binary_bit_or_invalid.move:8:9
  │
8 │         false | true;
  │         ^^^^^^^^^^^^
  │
  = outruled candidate `|(u8, u8): u8` (expected `u8` but found `bool` for argument 1)
  = outruled candidate `|(u16, u16): u16` (expected `u16` but found `bool` for argument 1)
  = outruled candidate `|(u32, u32): u32` (expected `u32` but found `bool` for argument 1)
  = outruled candidate `|(u64, u64): u64` (expected `u64` but found `bool` for argument 1)
  = outruled candidate `|(u128, u128): u128` (expected `u128` but found `bool` for argument 1)
  = outruled candidate `|(u256, u256): u256` (expected `u256` but found `bool` for argument 1)

error: no matching declaration of `|`
  ┌─ tests/checking/typing/binary_bit_or_invalid.move:9:9
  │
9 │         1 | false;
  │         ^^^^^^^^^
  │
  = outruled candidate `|(u8, u8): u8` (expected `u8` but found `bool` for argument 2)
  = outruled candidate `|(u16, u16): u16` (expected `u16` but found `bool` for argument 2)
  = outruled candidate `|(u32, u32): u32` (expected `u32` but found `bool` for argument 2)
  = outruled candidate `|(u64, u64): u64` (expected `u64` but found `bool` for argument 2)
  = outruled candidate `|(u128, u128): u128` (expected `u128` but found `bool` for argument 2)
  = outruled candidate `|(u256, u256): u256` (expected `u256` but found `bool` for argument 2)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:10:9
   │
10 │         false | 1;
   │         ^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `bool` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `bool` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `bool` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `bool` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `bool` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `bool` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:11:9
   │
11 │         @0x0 | @0x1;
   │         ^^^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `address` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `address` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `address` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `address` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `address` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `address` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:12:9
   │
12 │         (0: u8) | (1: u128);
   │         ^^^^^^^^^^^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `u128` for argument 2)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `u8` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `u8` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `u8` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `u8` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `u8` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:13:9
   │
13 │         r | r;
   │         ^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `M::R` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `M::R` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `M::R` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `M::R` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `M::R` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `M::R` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:14:9
   │
14 │         s | s;
   │         ^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `M::S` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `M::S` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `M::S` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `M::S` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `M::S` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `M::S` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:15:9
   │
15 │         1 | false | @0x0 | 0;
   │         ^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `bool` for argument 2)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `bool` for argument 2)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `bool` for argument 2)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `bool` for argument 2)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `bool` for argument 2)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `bool` for argument 2)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:15:9
   │
15 │         1 | false | @0x0 | 0;
   │         ^^^^^^^^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `address` for argument 2)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `address` for argument 2)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `address` for argument 2)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `address` for argument 2)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `address` for argument 2)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `address` for argument 2)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:16:9
   │
16 │         () | ();
   │         ^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `()` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `()` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `()` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `()` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `()` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `()` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:17:9
   │
17 │         1 | ();
   │         ^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `()` for argument 2)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `()` for argument 2)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `()` for argument 2)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `()` for argument 2)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `()` for argument 2)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `()` for argument 2)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:18:9
   │
18 │         (0, 1) | (0, 1, 2);
   │         ^^^^^^^^^^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `(?41, ?42)` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `(?41, ?42)` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `(?41, ?42)` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `(?41, ?42)` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `(?41, ?42)` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `(?41, ?42)` for argument 1)

error: no matching declaration of `|`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:19:9
   │
19 │         (1, 2) | (0, 1);
   │         ^^^^^^^^^^^^^^^
   │
   = outruled candidate `|(u8, u8): u8` (expected `u8` but found `(?54, ?55)` for argument 1)
   = outruled candidate `|(u16, u16): u16` (expected `u16` but found `(?54, ?55)` for argument 1)
   = outruled candidate `|(u32, u32): u32` (expected `u32` but found `(?54, ?55)` for argument 1)
   = outruled candidate `|(u64, u64): u64` (expected `u64` but found `(?54, ?55)` for argument 1)
   = outruled candidate `|(u128, u128): u128` (expected `u128` but found `(?54, ?55)` for argument 1)
   = outruled candidate `|(u256, u256): u256` (expected `u256` but found `(?54, ?55)` for argument 1)
